Add reindex from remote metrics