@@ -17,25 +17,87 @@ import org.junit.Before;
 
 import java.util.List;
 
+import static org.elasticsearch.reindex.ReindexMetrics.REINDEX_FAILURE_HISTOGRAM;
+import static org.elasticsearch.reindex.ReindexMetrics.REINDEX_FAILURE_HISTOGRAM_REMOTE;
+import static org.elasticsearch.reindex.ReindexMetrics.REINDEX_SUCCESS_HISTOGRAM;
+import static org.elasticsearch.reindex.ReindexMetrics.REINDEX_SUCCESS_HISTOGRAM_REMOTE;
 import static org.elasticsearch.reindex.ReindexMetrics.REINDEX_TIME_HISTOGRAM;
+import static org.elasticsearch.reindex.ReindexMetrics.REINDEX_TIME_HISTOGRAM_REMOTE;
 
 public class ReindexMetricsTests extends ESTestCase {
 
-    private RecordingMeterRegistry recordingMeterRegistry;
+    private RecordingMeterRegistry registry;
     private ReindexMetrics metrics;
 
     @Before
     public void createMetrics() {
-        recordingMeterRegistry = new RecordingMeterRegistry();
-        metrics = new ReindexMetrics(recordingMeterRegistry);
+        registry = new RecordingMeterRegistry();
+        metrics = new ReindexMetrics(registry);
     }
 
     public void testRecordTookTime() {
-        int secondsTaken = randomIntBetween(1, 50);
-        metrics.recordTookTime(secondsTaken);
-        List<Measurement> measurements = recordingMeterRegistry.getRecorder()
-            .getMeasurements(InstrumentType.LONG_HISTOGRAM, REINDEX_TIME_HISTOGRAM);
-        assertEquals(measurements.size(), 1);
-        assertEquals(measurements.get(0).getLong(), secondsTaken);
+        long secondsTaken = randomLongBetween(1, Long.MAX_VALUE);
+
+        // first metric
+        metrics.recordTookTime(secondsTaken, false);
+
+        List<Measurement> measurements = registry.getRecorder().getMeasurements(InstrumentType.LONG_HISTOGRAM, REINDEX_TIME_HISTOGRAM);
+        assertEquals(1, measurements.size());
+        assertEquals(secondsTaken, measurements.getFirst().getLong());
+
+        // second metric
+        long remoteSecondsTaken = randomLongBetween(1, Long.MAX_VALUE);
+        metrics.recordTookTime(remoteSecondsTaken, true);
+
+        measurements = registry.getRecorder().getMeasurements(InstrumentType.LONG_HISTOGRAM, REINDEX_TIME_HISTOGRAM);
+        assertEquals(2, measurements.size());
+        assertEquals(secondsTaken, measurements.getFirst().getLong());
+        assertEquals(remoteSecondsTaken, measurements.getLast().getLong());
+        List<Measurement> measurementsRemote = registry.getRecorder()
+            .getMeasurements(InstrumentType.LONG_HISTOGRAM, REINDEX_TIME_HISTOGRAM_REMOTE);
+        assertEquals(1, measurementsRemote.size());
+        assertEquals(remoteSecondsTaken, measurementsRemote.getFirst().getLong());
+    }
+
+    public void testRecordSuccess() {
+        // first metric
+        metrics.recordSuccess(false);
+
+        List<Measurement> measurements = registry.getRecorder().getMeasurements(InstrumentType.LONG_HISTOGRAM, REINDEX_SUCCESS_HISTOGRAM);
+        assertEquals(1, measurements.size());
+        assertEquals(1, measurements.getFirst().getLong());
+
+        // second metric
+        metrics.recordSuccess(true);
+
+        measurements = registry.getRecorder().getMeasurements(InstrumentType.LONG_HISTOGRAM, REINDEX_SUCCESS_HISTOGRAM);
+        assertEquals(2, measurements.size());
+        assertEquals(1, measurements.getFirst().getLong());
+        assertEquals(1, measurements.getLast().getLong());
+        List<Measurement> measurementsRemote = registry.getRecorder()
+            .getMeasurements(InstrumentType.LONG_HISTOGRAM, REINDEX_SUCCESS_HISTOGRAM_REMOTE);
+        assertEquals(1, measurementsRemote.size());
+        assertEquals(1, measurements.getFirst().getLong());
+    }
+
+    public void testRecordFailure() {
+        // first metric
+        metrics.recordFailure(false);
+
+        List<Measurement> measurements = registry.getRecorder().getMeasurements(InstrumentType.LONG_HISTOGRAM, REINDEX_FAILURE_HISTOGRAM);
+        assertEquals(1, measurements.size());
+        assertEquals(1, measurements.getFirst().getLong());
+
+        // second metric
+        metrics.recordFailure(true);
+
+        measurements = registry.getRecorder().getMeasurements(InstrumentType.LONG_HISTOGRAM, REINDEX_FAILURE_HISTOGRAM);
+        assertEquals(2, measurements.size());
+        assertEquals(1, measurements.getFirst().getLong());
+        assertEquals(1, measurements.getLast().getLong());
+        List<Measurement> measurementsRemote = registry.getRecorder()
+            .getMeasurements(InstrumentType.LONG_HISTOGRAM, REINDEX_FAILURE_HISTOGRAM_REMOTE);
+        assertEquals(1, measurementsRemote.size());
+        assertEquals(1, measurements.getFirst().getLong());
     }
 }
